# rico_smart_table

./: .gitignore  CMakeLists.txt  LICENSE  README.md  measure_saver.py  package.xml  scenario_manager.py  setup.py  setup.sh  smart_table.py  train_classifier.py  train_weight.py
auxiliary_scripts/: train_weight.py
connection/: connection.py
item/classifier/: image_recognition.py  position_recognition.py
launch/: smart_table.launch
nodes/: messages.py  table.py
