<?xml version="1.0"?>
<package format="2">
  <name>smart_table</name>
  <version>1.0.0</version>
  <description>The smart_table package</description>
  <maintainer email="kemot1709@gmail.com">TI</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>tiago_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
